# orcanet-rust

./: .gitignore  Cargo.toml  README.md  compose.yml
.github/workflows/: fmt.yml  market.yml  peernode-market.yml  peernode.yml  rust.yml
coin/: Cargo.toml
coin-mock/: build.rs
coin/src/: main.rs  server.rs
coin/src/crypto/: mod.rs
coin/src/db/: mod.rs
coin/src/grpc/: mod.rs
docker/coin/: Dockerfile
docker/market/: Dockerfile
docker/peernode/: Dockerfile
market/: Cargo.toml
market/lib-proto/: build.rs
market/src/: dht.rs  dht_entry.rs  lib.rs  main.rs  market.rs  proto.rs
market/tests/: malicious_test.rs  market_test.rs
peernode/: Cargo.toml  build.rs  config.json  invoice.txt  wallet.pkcs8
peernode-market/: Cargo.toml  build.rs  config.json
peernode-market/src/: client.rs
peernode-market/src/cli/: mod.rs  tests.rs
peernode-market/src/consumer/: encode.rs  http.rs  mod.rs
peernode-market/src/market/: dht.rs  dht_entry.rs  main.rs  mod.rs
peernode-market/src/market/tests/: market_test.rs
peernode-market/src/peer-node/: client.rs
peernode-market/src/peer-node/consumer/: encode.rs  http.rs  mod.rs
peernode-market/src/peer-node/market/: dht.rs  dht_entry.rs  market.rs  mod.rs
peernode-market/src/peer-node/producer/: mod.rs
peernode-market/src/producer/: files.rs  http.rs  mod.rs  test.rs
peernode-market/src/store/: mod.rs
peernode/src/peer-node/: client.rs  server.rs
peernode/src/peer-node/cli/: mod.rs
peernode/src/peer-node/consumer/: encode.rs  http.rs  (+1 more)
proto/: Cargo.toml  build.rs  coin.proto
proto/src/: lib.rs
(+12 files in other folders)
